# testProgram

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  hwtest.ps1
configs/: mbddf_pc_hal.json  mbddf_system_status.testcfg.json
docs/design/: README.md  business-scheduling-layer.md  five-layer-architecture.md  hal-interface-protocol.md  log-interface-protocol.md
docs/design/contracts/: business-scheduling-layer.md  device-communication-protocol.md  hal-interface-protocol.md  log-interface-protocol.md
docs/design/implementation/: hal-implementation-design-report.md  logging-implementation-design-report.md
docs/design/overview/: five-layer-architecture.md
docs/design/testing/: hal-test-design-report.md  testing-specification.md
docs/plan/: 2026-06-25-1412-plan.md  2026-06-25-1725-plan.md  2026-07-02-1331-plan.md  2026-07-20-1349-plan.md
docs/superpowers/plans/: 2026-07-13-biz-integration.md  2026-07-14-document-consistency-audit.md  2026-07-19-hal-io-document-consolidation.md  2026-07-19-mbddf-standard-control-channel.md  2026-07-20-shared-ui-controller-tui.md
docs/user/: tui-usage-guide.md
scripts/: terminal-actions.json
src/algorithm/: CMakeLists.txt
src/algorithm/include/algorithm/: mbddf_protocol.h  mbddf_transport.h  system_status_executor.h
src/algorithm/src/: mbddf_protocol.cpp  mbddf_transport.cpp  system_status_executor.cpp
src/app/: CMakeLists.txt  main.cpp  tui_main.cpp
src/app/gui/: gui_main.cpp  gui_main_window.cpp  gui_main_window.h
src/app/include/app/: frontend_launch_options.h  test_application_controller.h  tui_shell.h
src/app/src/: frontend_launch_options.cpp  test_application_controller.cpp  tui_shell.cpp
src/biz/: CMakeLists.txt
src/biz/include/biz/: biz_factory.h  biz_global.h  biz_types.h  i_algorithm_executor.h  i_report_generator.h  i_test_run_service.h  test_config_manager.h  test_plan_builder.h
src/biz/src/: biz_factory.cpp  biz_types.cpp  report_generator.cpp  test_config_manager.cpp  test_plan_builder.cpp  test_run_service.cpp
src/hal/: AGENTS.md  CMakeLists.txt
src/hal/include/hal/: hal_adapter_abi.h  hal_factory.h  hal_global.h  hal_types.h  i_analog_io.h  i_canfd_bus.h  i_control_channel.h  i_digital_io.h  i_hal_device.h  i_hal_service.h  i_serial_bus.h
src/hal/src/: adapter_loader.cpp  adapter_loader.h  c_abi_adapter.cpp  c_abi_adapter.h  control_channel_manager.cpp  control_channel_manager.h  control_io_provider.h  hal_device.cpp  hal_device.h  hal_error_mapper.cpp  hal_error_mapper.h  hal_factory.cpp  hal_service.cpp  hal_service.h  hal_types.cpp  hardware_adapter.h  mock_adapter.cpp  mock_adapter.h  qt_serial_control_provider.cpp  qt_serial_control_provider.h  qt_udp_control_provider.cpp  qt_udp_control_provider.h  resource_mapper.cpp  resource_mapper.h  safety_guard.cpp  safety_guard.h
src/logging/: CMakeLists.txt
src/logging/include/logging/: hal_log_bridge.h  i_log_service.h  log_file_sink.h  log_formatter.h  log_global.h  log_service.h  log_types.h
src/logging/src/: hal_log_bridge.cpp  log_file_sink.cpp  log_formatter.cpp  log_service.cpp  log_types.cpp
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  mbddf_protocol_test.cpp  system_status_executor_test.cpp
tests/algorithm/fixtures/: mbddf_system_status.testcfg.json
tests/app/: CMakeLists.txt  frontend_launch_options_test.cpp  gui_main_window_test.cpp  gui_test_main.cpp  test_application_controller_test.cpp  tui_shell_test.cpp  tui_smoke_input.txt
tests/app/fixtures/: mbddf_udp_hal.json
tests/app/support/: mbddf_udp_test_peer.cpp  mbddf_udp_test_peer.h
tests/biz/: CMakeLists.txt  algorithm_executor_contract_test.cpp  architecture_test.cpp  report_generator_test.cpp  test_config_manager_test.cpp  test_plan_builder_test.cpp  test_run_service_test.cpp  test_support.h
tests/hal/: CMakeLists.txt  adapter_loader_test.cpp  control_channel_test.cpp  hal_device_test.cpp  hal_error_mapper_test.cpp  hal_service_test.cpp  hal_types_test.cpp  mock_adapter_test.cpp  resource_mapper_test.cpp  safety_guard_test.cpp  test_support.h
tests/hal/fixtures/: adapter_loader_fixture.cpp  adapter_loader_missing_symbol_fixture.cpp
tests/log/: CMakeLists.txt  hal_log_bridge_test.cpp  log_file_sink_test.cpp  log_service_test.cpp
